2002-12-17  Andrew Cagney  <ac131313@redhat.com>

	* stack.c (frame_info): Use get_frame_saved_regs.
	* breakpoint.c (until_break_command): Use get_frame_pc.

2002-12-16  Kevin Buettner  <kevinb@redhat.com>

	* buildsym.c (block_end_complaint, anon_block_end_complaint)
	(innerblock_complaint, innerblock_anon_complaint)
	(blockvector_complaint): Delete deprecated complaint structs.
	(finish_block, make_blockvector, end_symtab): Replace calls
	to complain() with calls to complaint().
	* coffread.c (ef_complaint, ef_stack_complaint, eb_stack_complaint)
	(bf_no_aux_complaint, ef_no_aux_complaint, lineno_complaint)
	(unexpected_type_complaint, bad_sclass_complaint)
	(misordered_blocks_complaint, tagndx_bad_complaint, eb_complaint):
	Delete deprecated complaint structs.
	(coff_symtab_read, enter_linenos, decode_type, decode_base_type):
	Replace calls to complain() with calls to complaint().
	* dbxread.c (lbrac_complaint, string_table_offset_complaint)
	(unknown_symtype_complaint, unknown_symchar_complaint)
	(lbrac_rbrac_complaint, lbrac_unmatched_complaint)
	(lbrac_mismatch_complaint, repeated_header_complaint)
	(unclaimed_bincl_complaint, discarding_local_symbols_complaint):
	Delete deprecated complaint structs.
	(unknown_symtype_complaint, lbrac_mismatch_complaint)
	(repeated_header_complaint)
	(function_outside_compiliation_unit_complaint): New functions.
	(add_old_header_file, find_corresponding_bincl_psymtab)
	(set_namestring, find_stab_function_addr, read_dbx_symtab)
	(process_one_symbol): Replace calls to complain() with, possibly
	indirect, calls to complaint().
	* dwarfread.c (no_bfd_get_N, malformed_die, bad_die_ref)
	(unknown_attribute_form, unknown_attribute_length)
	(unexpected_fund_type, unknown_type_modifier, volatile_ignored)
	(const_ignored, botched_modified_type, op_deref2, op_deref4)
	(basereg_not_handled, dup_user_type_allocation)
	(dup_user_type_definition, missing_tag, bad_array_element_type)
	(subscript_data_items, unhandled_array_subscript_format)